--- a/vehicles.html
+++ b/vehicles.html
@@ -1,40 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  rel="icon" href="./img/pngwing.com.png" type="image/x-icon">
+    <link rel="icon" href="./img/logoAlphaRomero.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Vehiculos</title>
 </head>
+
 <body>
-    <div class="div container">
+    <div class="container">
         <header class="header">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="#"><img src="./img/pngwing.com.png" alt="Logo AlfaRomeo" ></a>
-                  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                      <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                      <a class="nav-link" href="#">Vehiculos</a>
-                      <a class="nav-link" href="#">Contactanos</a>
-                      <a class="nav-link disabled" aria-disabled="true">Cotizar</a>
-                    </div>
-                  </div>
+            <nav class="navbar navbar-expand-lg navbar-ligth bg-light">
+                <a class="navbar-brand" href="index.html"><img src="./img/logoAlphaRomero.png" alt="logoAlphaRomeo"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="vehicles.html">Vehiculos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#">Financiamiento</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#">Contactanos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#">Acerca de nosotros</a>
+                        </li>
+                        <form class="form-inline my-2 my-lg-0">
+                            <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
+                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+                        </form>
+                    </ul>
                 </div>
-              </nav>
+            </nav>
         </header>
         <main class="main">
-            <div class="vehicles">
+            <div class="card-header navbar-ligth bg-light">
                 <h1>Vehiculos</h1>
-
+                <div class="card-deck">
+                    <div class="card">
+                        <img class="card-img" src="./img/AR_STELVIO.png" alt="alfaRomeoSTELVIO">
+                        <div class="card-body">
+                            <h5 class="card-title">S T E L V I O</h5>
+                            <p class="card-text">Un SUV con autentico estilo italiano</p>
+                            <p class="card-text"><small class="text-muted">Precio: 179,652,600 Pesos</small></p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img" src="./img/alfaRomeoGuilia.jpg" alt="alfaRomeoGUILIA">
+                        <div class="card-body">
+                            <h5 class="card-title">G U I L I A</h5>
+                            <p class="card-text">Una confluencia de ingenieria y emocion</p>
+                            <p class="card-text"><small class="text-muted">Precio: 179,652,600 Pesos</small></p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img" src="./img/alfaRomeoTonale.jpg" alt="alfaRomeoTONALE">
+                        <div class="card-body">
+                            <h5 class="card-title">T O N A L E</h5>
+                            <p class="card-text">La evolucion continua</p>
+                            <p class="card-text"><small class="text-muted">Precio: 179,652,600 Pesos</small></p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
         <footer class="footer">
-            <div class="aboutUs">
-                <h1>Acerca de Nosotros</h1>
-                
+            <div class="aboutUs navbar-ligth bg-light">
+                <h1 class="aboutUs text-center">Acerca de nosotros</h1>
+                <a href="https://www.cesde.edu.co/"><img src="./img/logoCESDE.png" alt="logoCESDE"></a>
+                    <ul>
+                        <li class="items">
+                            <a href="https://www.facebook.com/?locale=es_LA">
+                                <img src="./img/facebook.png" alt="iconFacebook">
+                            </a>
+                        </li>
+                        <li class="items">
+                            <a href="https://github.com/Jpmora20/AlfaRomeo">
+                                <img src="./img/github.png" alt="iconGitHub">
+                            </a>
+                        </li>
+                        <li class="items">
+                            <a href=""></a>
+                        </li>
+                        <li class="items"></li>
+                        <li class="items"></li>
+                        <li class="items"></li>
+                    </ul>
             </div>
         </footer>
     </div>
