--- a/InforGeneral/index.html
+++ b/InforGeneral/index.html
@@ -9,7 +9,39 @@
     <title>Alfa Romeo</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" style="max-height: 100px;">
+  <nav class="navbar navbar-expand-lg navbar-ligth bg-light">
+    <a class="navbar-brand" href="#"><img src="./img/pngwing.com.png" alt="logoAlphaRomeo"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="../InforGeneral/index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../Servicio/vehicles.html">Vehiculos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#">Financiamiento</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#">Contactanos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#">Acerca de nosotros</a>
+            </li>
+            <section class="d-flex justify-content-between " style="margin-left: 850px;">
+                <input class="form-control p-2" type="search" placeholder="Buscar" aria-label="Search">
+                <button class="btn btn-outline-success " type="submit" style="margin-left: 10px;">Buscar</button>
+
+              </section>
+
+          </ul>
+    </div>
+</nav>
+  <!-- <nav class="navbar navbar-expand-lg bg-body-tertiary" style="max-height: 100px;">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="./img/pngwing.com.png" alt="Logo AlfaRomeo" ></a>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -21,7 +53,7 @@
             </div>
           </div>
         </div>
-      </nav>
+      </nav> -->
       <main>
         <div class="card text-center">
           <div class="card-header">
