--- a/Servicio/vehicles.html
+++ b/Servicio/vehicles.html
@@ -14,7 +14,7 @@
     <div class="container">
         <header class="header">
             <nav class="navbar navbar-expand-lg navbar-ligth bg-light">
-                <a class="navbar-brand" href="index.html"><img src="./img/logoAlphaRomero.png" alt="logoAlphaRomeo"></a>
+                <a class="navbar-brand" href="../InforGeneral/index.html"><img src="./img/logoAlphaRomero.png" alt="logoAlphaRomeo"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -22,10 +22,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Inicio</a>
+                            <a class="nav-link" href="../InforGeneral/index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="vehicles.html">Vehiculos</a>
+                            <a class="nav-link" href="./vehicles.html">Vehiculos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link disabled" href="#">Financiamiento</a>
@@ -36,7 +36,7 @@
                         <li class="nav-item">
                             <a class="nav-link disabled" href="#">Acerca de nosotros</a>
                         </li>
-                        <form class="form-inline my-2 my-lg-0">
+                        <form class="form-inline my-2 my-lg-0" style="margin-left: 350px;">
                             <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
                             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
                         </form>
