--- a/InforGeneral/index.html
+++ b/InforGeneral/index.html
@@ -67,7 +67,7 @@
                 <button type="button" data-bs-target="#carouselExampleSlidesOnly" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleSlidesOnly" data-bs-slide-to="2" aria-label="Slide 3"></button>
               </div>
-              <div class="carousel-inner">
+              <!-- <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img src="./img/SLIDE Giulia Quadrifoglio.jpg" class="d-block w-100" alt="" style="max-width: 650px;">
                   <div class="carousel-caption d-none d-md-block">
@@ -89,7 +89,27 @@
                     <p>Descapotable deportivo con motor turbo y estructura ligera.</p>
                   </div>
                 </div>
-        
+              </div> -->
+              <div id="carouselExampleFade" class="carousel slide carousel-fade">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./img/Alfa Romeo Stelvio Quadrifoglio.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/4C Spider.avif" class="d-block w-90" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/Giulia Quadrifoglio.jpg" class="d-block w-100" alt="..." style="height: 80%;">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
               </div>
             </div>
           
